# service/apisvr/internal/handler/system/notify/config/template/deleteHandler.go
@@ -1,0 +1,25 @@
+package template
+
+import (
+	"gitee.com/i-Things/core/service/apisvr/internal/logic/system/notify/config/template"
+	"gitee.com/i-Things/core/service/apisvr/internal/svc"
+	"gitee.com/i-Things/core/service/apisvr/internal/types"
+	"gitee.com/i-Things/share/errors"
+	"gitee.com/i-Things/share/result"
+	"github.com/zeromicro/go-zero/rest/httpx"
+	"net/http"
+)
+
+func DeleteHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.NotifyConfigTemplateDeleteReq
+		if err := httpx.Parse(r, &req); err != nil {
+			result.Http(w, r, nil, errors.Parameter.WithMsg("入参不正确:"+err.Error()))
+			return
+		}
+
+		l := template.NewDeleteLogic(r.Context(), svcCtx)
+		err := l.Delete(&req)
+		result.Http(w, r, nil, err)
+	}
+}
