# service/apisvr/internal/handler/wsRoutes.go
@@ -626,6 +626,11 @@ func RegisterWsHandlers(server *ws.Server, serverCtx *svc.ServiceContext) {
 			[]rest.Route{
 				{
 					Method:  http.MethodPost,
+					Path:    "/delete",
+					Handler: systemnotifyconfigtemplate.DeleteHandler(serverCtx),
+				},
+				{
+					Method:  http.MethodPost,
 					Path:    "/index",
 					Handler: systemnotifyconfigtemplate.IndexHandler(serverCtx),
 				},
